--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "PT Sans", sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home,
+.services,
+.about,
+.contactus,
+.hireus,
+.marketing,
+.consulting,
+.enquiry,
+ .development,
+ .design{
   display: flex;
-  flex-direction: column;
+  height: 90vh;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 3rem;
 }
+.carousel{
+  display:flex ;
+  justify-content: center;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.carousel .slide{
+  background-color: black;
+  height: 80vh;
+}
+.carousel .slide img{
+  max-height: 100%;
+  width: auto;
+}
+.image{
+  margin: 0 auto;
+  height:100% ;
+  width: auto;
+ 
+}
+@media only screen and (max-width:1200px){
+  .carousel{
+    height: 90vh;
+    
   }
-  to {
-    transform: rotate(360deg);
+  .carosel  img{
+    margin: 10vh auto;
+    width: 100vw;
+
+  }
+}
+@media only screen and (max-width:900px){
+  .carousel{
+    height: 70vh;
+  }
+  .carosel  img{
+    margin: 10vh auto;
+    width: 100vw;
+
+  }
+}
+@media only screen and (max-width:750px){
+  .carousel{
+    height: 70vh;
+  }
+  .carosel  img{
+    margin: 10vh auto;
+    width: 10vw;
+
+  }
+}
+@media only screen and (max-width:650px){
+  .carousel{
+    height: 60vh;
+  }
+  .carosel img{
+    margin: 10vh auto;
+    width: 10vw;
+
+  }
+}
+@media only screen and (max-width:500px){
+  .carousel{
+    height: 50vh;
+  }
+  .carosel  img{
+    margin: 10vh auto;
+    width: 10vw;
+
   }
 }
